--- a/ui/app/assets/css/main.css
+++ b/ui/app/assets/css/main.css
@@ -3,11 +3,12 @@
 
 
 :root {
-  --ui-primary:black;
-  --ui-secondary: var(--ui-color-secondary-500);
+  --ui-primary: var(--color-black);
+  --ui-secondary: var(--color-red-500);
   --ui-success: var(--ui-color-success-500);
   --ui-info: var(--ui-color-info-500);
   --ui-warning: var(--ui-color-warning-500);
   --ui-error: var(--ui-color-error-500);
+    --ui-bg: var(--color-white);
 }
 
